<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UasT</string>
    <string name="hello_world">Hello world!</string>
    <string name="search">Search</string>
    <string name="detail">Detail:</string>
    <string name="details">Details</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="scheduled_events">Scheduled Events:</string>
    <string name="new_event">New</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="location">Location:</string>
    <string name="reminder">Reminder:</string>
    <string name="choose_time">Choose Time:</string>
    <string name="day">Day</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="second">Second</string>
    <string name="reminder_prompt">Click to set reminder…</string>
    <string name="match_description">Proposed Event Details:</string>
    <string name="match_prompt">Click to set…</string>
    <string name="match_slot">Possible time slots:</string>
    <string name="duration">Duration:</string>
    <string name="range">Range:</string>
    <string name="exit">Exit</string>
    <string name="show">Show</string>
    <string name="login_prompt">Please enter your ITSC email to receive the validation code and login.</string>
    <string name="hint_itsc">ITSC?</string>
    <string name="match">Match</string>
    <string name="hint_valid">Validation Code?</string>
    <string name="hint_name">User Name?</string>
    <string name="hint_ip">Specific server IP?</string>
    <string name="ac_name_prompt">You can change your name here:</string>
    <string name="reset">Reset</string>
    <string name="login">Login</string>
    <string name="set">Set</string>
    <string name="message">Message?</string>
    <string name="send">Send?</string>
    <string name="attachment">Attachment</string>
    <string name="subtitle">Subtitle</string>
    <string name="title">Title</string>
    <string name="view_img">viewIMG</string>
    <string name="course">Course</string>
    <string name="calendar">Calendar</string>
    <string name="chat">Chat</string>
    <string name="compose_content">Compose Content</string>
    <string name="user_itsc">User ITSC</string>
    <string name="user_name">User Name</string>
    <string name="loading">Loading…</string>
    <string name="last_chat">Last Chat</string>
    <string name="course_code">Course Code</string>
    <string name="course_name">Course Name</string>
    <string name="course_desc">Course Description</string>
    <string name="course_code_title">Course Code / Title</string>
    <string name="favourite">Favourite</string>
    <string name="like">Like</string>
    <string name="likes">100 Likes</string>
    <string name="admin">Admin</string>
    <string name="member">Member</string>
    <string name="gp_name">Group Name</string>
    <string name="gp_desc">Group Description</string>
    <string name="add">Add</string>
    <string name="confirm">Confirm</string>
    <string name="contact">Contact</string>
    <string name="camera">Camera</string>
    <string name="image">Image</string>
    <string name="photo_prompt">Please upload a photo</string>

    <string name="frequency_prompt">Frequency:</string>
    <string-array name="frequency_choice">
        <item>Once</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Bi-weekly</item>
        <item>Monthly</item>
    </string-array>
    <string name="rem_prompt">Mode:</string>
    <string-array name="rem_choice">
        <item>Off</item>
        <item>On</item>
        <item>Before</item>
    </string-array>
    <string name="folder_prompt">Select folder: </string>
    <string-array name="folder_choice">
        <item>…</item>
        <item>Camera</item>
        <item>USTasUST</item>
        <item>ALL</item>
    </string-array>

</resources>
