<?xml version="1.0" encoding="utf-8"?>
<hk.ust.comp4521.UasT.CourseTradingCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="4dp"
	    android:orientation="vertical"
	    >

	    <TextView
	        android:id="@+id/title"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:textColor="@android:color/primary_text_light"
		    android:textSize="16sp"
		    android:text="@string/title"
            android:textIsSelectable="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/sub"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/subtitle"
                    android:textColor="@android:color/secondary_text_light"
                    android:textSize="12sp"
                    android:layout_marginBottom="8dp" />

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="30dp"
                    android:id="@+id/likeButton"
                    android:background="@drawable/icon_like"
                    android:contentDescription="@string/view_img" />

                <TextView
                    android:id="@+id/likeMessage"
                    android:layout_width="80dp"
                    android:layout_height="20dp"
                    android:layout_gravity="right"
                    android:text="@string/likes"
                    android:enabled="false" />
            </LinearLayout>

        </LinearLayout>

</hk.ust.comp4521.UasT.CourseTradingCardView>
