<?xml version="1.0" encoding="utf-8"?>
<hk.ust.comp4521.UasT.ChatCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:paddingBottom="10dp" >

    <LinearLayout
        android:id="@+id/bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/chat_notuser"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:id="@+id/sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2sp"
            android:text="@string/subtitle"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="8sp"
            android:text="@string/title"
            android:textColor="@android:color/primary_text_light"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/match_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="8sp"
            android:visibility="gone" >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/view_img"
                android:src="@drawable/download"
                android:contentDescription="@string/view_img" />
        </LinearLayout>

    </LinearLayout>

</hk.ust.comp4521.UasT.ChatCardView>