<?xml version="1.0" encoding="utf-8"?>
<hk.ust.comp4521.UasT.CourseHeaderCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/header_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="1dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff86e241" >

            <TextView
                android:id="@+id/title"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/course_code_title"
                android:textColor="@android:color/primary_text_light"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/favorite"
                style="?android:attr/buttonStyleSmall"
                android:src="@drawable/favorite"
                android:layout_marginRight="5dp"
                android:layout_gravity="center_vertical"
                android:layout_width="48dip"
                android:layout_height="48dip"
                android:contentDescription="@string/favourite" />
        </LinearLayout>

        <TextView
            android:id="@+id/sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="4dp"
            android:text="@string/course_desc"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="12sp" />
    </LinearLayout>

</hk.ust.comp4521.UasT.CourseHeaderCardView>