<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/choose_time"
        android:id="@+id/time_label"
        android:layout_margin="5dp"
        android:layout_gravity="left" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/day"
                android:id="@+id/labelDay"
                android:textAlignment="center"
                android:layout_weight="0.25"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/minute"
                android:id="@+id/labelMinute"
                android:layout_weight="0.25"
                android:textAlignment="center"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/hour"
                android:id="@+id/labelHour"
                android:layout_weight="0.25"
                android:textAlignment="center"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/second"
                android:id="@+id/labelSecond"
                android:layout_weight="0.25"
                android:textAlignment="center"
                android:gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <NumberPicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/numDay"
                android:layout_weight="0.25"
                android:layout_margin="5dp" />

            <NumberPicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/numHour"
                android:layout_weight="0.25"
                android:layout_margin="5dp" />

            <NumberPicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/numMinute"
                android:layout_weight="0.25"
                android:layout_margin="5dp" />

            <NumberPicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/numSecond"
                android:layout_weight="0.25"
                android:layout_margin="5dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/accept"
                android:id="@+id/BtnAccept"
                android:layout_weight="0.2"
                android:layout_margin="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/decline"
                android:id="@+id/BtnDecline"
                android:layout_weight="0.2"
                android:layout_margin="10dp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
